--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,6 +7,7 @@
 @import './base/fonts.scss';
 @import './base/styles.scss';
 
+@import './components/container.scss';
 @import './components/footer.scss';
 @import './components/header.scss';
 @import './components/menu.scss';
